--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,27 @@
-<h1>Hello, User!</h1>
-<p>Get Ready!</p>
+<h1>Collected Item Archive</h1>
+
 <p>This is an archive of items.  Add something new!</p>
+
+<table>
+  <tr>
+    <th>Item</th>
+    <th>Description</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+ 
+<% @items.each do |item| %>
+  <tr>
+    <td><%= item.item %></td>
+    <td><%= item.description %></td>
+    <td><%= link_to "Show", item %></td>
+    <td><%= link_to "Edit", edit_item_path(item) %></td>
+    <td><%= link_to "Remove", item, method: :delete, data: { confirm: "Are you sure?" } %></td>
+  </tr>
+<% end %>
+</table>
+ 
+<br>
+ 
+<%= link_to "New item", new_item_path %>
