--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :item %>
+  <div class= "field">
+    <%= f.label :item %><br>
     <%= f.text_field :item %>
   </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
+ 
+  <div class= "field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description, rows: 10, cols: 60 %>
   </div>
-
-  <div class="actions">
+ 
+  <div class= "actions">
     <%= f.submit %>
   </div>
 <% end %>
