--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,20 +1,5 @@
 <h1>Create a New Item</h1>
 
-<%= form_for :item do |f| %>
-
-  <div class= "field">
-    <%= f.label :item %><br>
-    <%= f.text_field :item %>
-  </div>
- 
-  <div class= "field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description, rows: 10, cols: 60 %>
-  </div>
- 
-  <div class= "actions">
-    <%= f.submit %>
-  </div>
+<%= render 'form', item: @item %>
   
-  <%= link_to 'Back', items_path %>
-<% end %>
+<%= link_to 'Back', items_path %>
