creating routes and framework for User

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Collected Item Archive</h1>
 
-<p>This is an archive of items.  Add something new!</p>
+<p>This is a database of vintage and found items.  Add something new!</p>
 
 <table>
   <tr>
@@ -25,3 +25,4 @@
 <br>
  
 <%= link_to "New item", new_item_path %>
+<%= link_to "New user", new_user_path %>
