--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(item) do |f| %>
   <% if item.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(book.errors.count, "error") %> prohibited this item from being saved:</h2>
+      <h2><%= pluralize(item.errors.count, "error") %> prohibited this item from being saved:</h2>
 
       <ul>
       <% item.errors.full_messages.each do |message| %>
@@ -20,6 +20,11 @@
     <%= f.label :description %><br>
     <%= f.text_area :description, rows: 10, cols: 60 %>
   </div>
+  
+  <div class= "field">
+    <%= f.label :username %><br>
+    <%= text_field :user, :name %>
+  </div>  
  
   <div class= "actions">
     <%= f.submit %>
