rollback and destroy User model and controller

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class= "field">
-    <%= f.label :item %><br>
-    <%= f.text_field :item %>
+    <%= f.label :article %><br>
+    <%= f.text_field :article %>
   </div>
  
   <div class= "field">
@@ -22,8 +22,8 @@
   </div>
   
   <div class= "field">
-    <%= f.label :username %><br>
-    <%= text_field :user, :name %>
+    <%= f.label :category %><br>
+    <%= text_field :category, :name %>
   </div>  
  
   <div class= "actions">
