Renamed column from Item to Article and raked migration
Ran the following commands:
	$ rails g migration Item article:string
	$ rake db:migrate
	$ rails g migration AddArticletoTable article:string
	$ rake db:migrate

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class= "field">
     <%= f.label :article %><br>
-    <%= f.text_field :article %>
+    <%= f.text_field :articles %>
   </div>
  
   <div class= "field">
