--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Item:</strong>
-  <%= @item.item %>
+  <strong>Article:</strong>
+  <%= @item.articles %>
 </p>
 
 <p>
