--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -13,7 +13,7 @@
  
 <% @items.each do |item| %>
   <tr>
-    <td><%= item.article %></td>
+    <td><%= item.articles %></td>
     <td><%= item.description %></td>
     <td><%= link_to "Show", item %></td>
     <td><%= link_to "Edit", edit_item_path(item) %></td>
@@ -25,4 +25,3 @@
 <br>
  
 <%= link_to "New item", new_item_path %>
-<%= link_to "New user", new_user_path %>
